####################
Bazaar Release Notes
####################

.. contents:: List of Releases
   :depth: 1

bzr 2.3b2
#########

:2.3.b2: NOT RELEASED YET

Compatibility Breaks
********************

New Features
************

* Add ``mainline`` revision specifier, which selects the revision that
  merged a specified revision into the mainline.  (Aaron Bentley)

* Add ``annotate`` revision specifier, which selects the revision that
  introduced a specified line of a file.  (Aaron Bentley)

* ``bzr status`` now displays a summary of existing shelves after
  the other status information. This is done using a ``post_status``
  hook.
  (Parth Malwankar, #403687)

* GNU lsh is now a supported lsh client; just set BZR_SSH to 'lsh'.
  Also, bzr will recognize if the 'ssh' comand is a symlink to lsh.
  (Matthew Gordon, #374700)

Bug Fixes
*********

* ``bzr break-lock --force`` breaks the lock without prompting.  (Before
  using this, make sure the process holding the lock really is dead.)
  (Martin Pool, #392315)

* Print junk rather than throwing a UnicodeDecodeError from ``bzr version-info``
  when using the rio format (with non-ascii information) on a non-utf-8 terminal.
  (Andrej A Antonov, #518609)

* Skip tests that needs a bzr source tree when there isn't one. This is
  needed to succesfully run the test suite for installed versions.
  (Vincent Ladeuil, #644855).

* Skip the tests that requires respecting the chmod bits when running as root.
  (Vincent Ladeuil, #646133)

* ``unshelve --preview`` now can show diff in a non-ascii encoding.
  (Andrej A Antonov, #518916)

Improvements
************

Documentation
*************

API Changes
***********

Internals
*********

* Small change to GroupCompressBlock to work more in terms of 'chunks'
  rather than 'content' for its compressed storage. (John Arbash Meinel)

* When running ``bzr selftest --subunit`` the subunit stream will no
  longer include the "log" information for tests which are considered to